# taskfarmer-mirror

backend/: CMakeLists.txt  README.md  main.cpp
backend/include/: Authoriser.hpp  Database.hpp  HttpServer.hpp  Rbac.hpp  TaskNode.hpp  TaskService.hpp  User.hpp  UserService.hpp
backend/src/: Authoriser.cpp  Database.cpp  HttpServer.cpp  Rbac.cpp  TaskNode.cpp  TaskService.cpp  UserService.cpp
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/api/create/: route.js
frontend/src/app/api/delete/: route.js
frontend/src/app/api/ls/: route.js
frontend/src/app/api/modify/: route.js
frontend/src/app/taskexplorer/: page.jsx
frontend/src/components/contextmenu/: ContextMenu.jsx
frontend/src/components/explorer/: Explorer.jsx  ExplorerToolbar.jsx
frontend/src/components/modal/: CreateNodeModal.jsx  DeleteConfirmModal.jsx  LoginModal.jsx  ModifyNodeModal.jsx  modal.css  spinner.css
frontend/src/components/navbar/: Navbar.jsx  navbar.css
frontend/src/components/tree/: Tree.jsx  TreeNode.jsx  tree.css  treeCache.js
frontend/src/lib/: api.js  clientApi.js  serverApi.js
